tests/errors/range-above-max.ssv
score:int(0..100)
50
101
